tests/miniJava/neg/003872_mutation.MiniJava
class java { public static void Main ( String [ ] java ) { if while ( 0 ) { } } }
